# pai-dev-repo

assignment_1/: .gitignore  PAI_Stock_Chatbot_Complete.ipynb  README.md  requirements.txt  streaming.py
assignment_1/api/: main.py
assignment_1/api/v1/: chat.py
assignment_1/app/: main.py  ui_streamlit.py
assignment_1/app/agents/: graph.py  nodes.py  state.py  tools.py
assignment_1/tests/: print_streaming.py  test_agent.py  test_multiSession.py
pai-sql-agent/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-start.sh  env.example  pyproject.toml  test_basic_functionality.py  test_memory_simple.py
pai-sql-agent/alembic/: env.py
pai-sql-agent/alembic/versions/: 001_initial_schema.py
pai-sql-agent/database/init/: 99_init_vector.sql
pai-sql-agent/scripts/: update_admin_areas.py
pai-sql-agent/src/: config.py  container.py
pai-sql-agent/src/agent/: __init__.py  admin_areas.py  chain.py  checkpointer.py  container.py  domain.py  factory.py  graph.py  helper.py  nodes.py  prompt.py  service.py  settings.py  streaming_service.py  tools.py  utils.py
pai-sql-agent/src/config/: settings.py
pai-sql-agent/src/crawler/: __init__.py  sgis_client.py
pai-sql-agent/src/database/: __init__.py  base.py  base_repository.py  connection.py  container.py  domains.py  entities.py  factory.py  init_data.py  models.py  repository.py  service.py  session_factory.py  settings.py
pai-sql-agent/src/llm/: __init__.py  container.py  domains.py  provider.py  service.py  settings.py
pai-sql-agent/src/rag/: __init__.py  service.py
pai-sql-agent/src/rag/embeddings/: __init__.py  models.py  service.py
pai-sql-agent/src/rag/retrieval/: __init__.py  ranker.py  service.py
pai-sql-agent/src/rag/vector/: __init__.py  search.py  store.py
pai-sql-agent/src/session/: __init__.py  container.py  domains.py  entities.py  repository.py  service.py
pai-sql-agent/src/tools/: __init__.py  container.py  domains.py  entities.py  repository.py  service.py  sql_tools.py
pai-sql-agent/src/tools/sql_agent/: __init__.py  container.py  graph.py  nodes.py  prompt.py  tools.py
pai-sql-agent/src/tools/sql_agent/external_database/: __init__.py  database.py  service.py
pai-sql-agent/webapp/: container.py  dependencies.py  main.py  models.py  streamlit_app.py
pai-sql-agent/webapp/routers/: agent.py  data.py  debug.py
pai-stock-chatbot/: .gitignore  README.md  pyproject.toml
pai-stock-chatbot/rag-server/: .env.example  pyproject.toml  pytest.ini
pai-stock-chatbot/rag-server/src/: exceptions.py
pai-stock-chatbot/rag-server/src/agent/: container.py  graph.py  nodes.py  service.py  state.py  tools.py
pai-stock-chatbot/rag-server/src/chat_session/: __init__.py  container.py  domains.py  entities.py  repository.py  service.py
pai-stock-chatbot/rag-server/src/chatbot/: __init__.py  container.py  domains.py  repository.py  service.py  services.py
pai-stock-chatbot/rag-server/src/llm/: __init__.py  container.py  custom_llm.py  domains.py  service.py  settings.py
pai-stock-chatbot/rag-server/src/stock/: container.py  repository.py  services.py  tools.py
pai-stock-chatbot/rag-server/tests/: README.md  conftest.py  pytest.ini
pai-stock-chatbot/rag-server/tests/agent/: test_agent.py  test_tools.py
pai-stock-chatbot/rag-server/tests/chat_session/: test_chat_session.py
pai-stock-chatbot/rag-server/tests/chatbot/: test_chatbot.py  test_chatbot_domains.py  test_domains.py  test_repository.py
pai-stock-chatbot/rag-server/tests/stock/: test_service.py
pai-stock-chatbot/rag-server/webapp/: container.py  dependency.py  dtos.py  main.py
pai-stock-chatbot/rag-server/webapp/routers/: chat.py
pai-stock-chatbot/rag-streamlit/: streamlit_app.py
pai-stock-chatbot/webapp/: main.py  streamlit_app.py
pai-web-agent/: .gitignore  README.md  STREAMLIT_GUIDE.md  agent.py  app.py  graph.py  nodes.py  prompts.py  pyproject.toml  run_streamlit.py  tavily_search_implementation_guide.md  test_tavily_domains.py  tools.py
src/agent/: nodes.py  state.py
src/chat_session/: entities.py
src/llm/: __init__.py
src/stock/: tools.py
webapp/: streamlit_app.py
(+11 files in other folders)
