[tool.poetry]
name = "pai-sql-agent"
version = "0.1.0"
description = "SQL Agent for Pohang City Budget Data Analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
langchain = "^0.1.0"
langgraph = "^0.0.40"
langchain-openai = "^0.0.5"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
httpx = "^0.25.2"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
sse-starlette = "^1.8.2"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true