[project]
name = "pai-sql-agent"
version = "0.1.0"
description = "LangGraph-based SQL Agent with SGIS Census Data"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.45",
    "langchain>=0.3.8",
    "langchain-openai>=0.2.8",
    "langchain-community>=0.3.7",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.25",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "streamlit>=1.29.0",
    "pydantic>=2.5.2",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "langgraph-checkpoint-postgres>=1.0.0",
    "psycopg>=3.1.0",
    "psycopg-pool>=3.1.0",
    "dependency-injector>=4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true