[project]
name = "rag-server"
version = "0.1.0"
description = "주식 가격 조회 및 계산을 도와주는 AI 챗봇 백엔드"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "yfinance>=0.2.0",
    "cachetools>=5.3.0",
    "numexpr>=2.8.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "dependency-injector>=4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "webapp"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]